--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,63 @@ html {
     /* border-image: fill 9 linear-gradient(rgba(10, 16, 31, 0.1), #1b1b1b); */
 }
 
-.deco {
-    text-decoration: none;
-    background-color: red;
+/* ..................... */
+.wrapper {
+    width: 90%;
+    max-width: 1536px;
+    margin-inline: auto;
+    position: relative;
+    height: 500px;
+    margin-top: 5rem;
+    mask-image: linear-gradient(to right,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1) 20%,
+            rgba(0, 0, 0, 0) 80%,
+            rgba(0, 0, 0, 0));
 }
+
+.item {
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    border-radius: 10px;
+    position: absolute;
+    left: max(calc(200px * 8), 100%);
+    animation-name: scrollleft;
+    animation-duration: 20s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-delay: -10s;
+    
+}
+
+@keyframes scrollleft {
+    to {
+        left: -200px;
+    }
+}
+
+.item1 {
+    animation-delay: calc(20s / 6 * (6 - 1) * -1);
+}
+
+.item2 {
+    animation-delay: calc(20s / 6 * (6 - 2) * -1);
+}
+
+.item3 {
+    animation-delay: calc(20s / 6 * (6 - 3) * -1);
+}
+
+.item4 {
+    animation-delay: calc(20s / 6 * (6 - 4) * -1);
+}
+
+.item5 {
+    animation-delay: calc(20s / 6 * (6 - 5) * -1);
+}
+
+.item6 {
+    animation-delay: calc(20s / 6 * (6 - 6) * -1);
+}
+/* ..................... */
