Bachelor degree added as marquee tag

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
 html {
     scroll-behavior: smooth;
     transition: all, 5s linear;
+    overflow-x: hidden ;
 }
 
 .yo {
@@ -33,62 +34,5 @@ html {
 }
 
 /* ..................... */
-.wrapper {
-    width: 90%;
-    max-width: 1536px;
-    margin-inline: auto;
-    position: relative;
-    height: 500px;
-    margin-top: 5rem;
-    mask-image: linear-gradient(to right,
-            rgba(0, 0, 0, 0),
-            rgba(0, 0, 0, 1) 20%,
-            rgba(0, 0, 0, 0) 80%,
-            rgba(0, 0, 0, 0));
-}
 
-.item {
-    width: 200px;
-    height: 200px;
-    background-color: red;
-    border-radius: 10px;
-    position: absolute;
-    left: max(calc(200px * 8), 100%);
-    animation-name: scrollleft;
-    animation-duration: 20s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-delay: -10s;
-    
-}
-
-@keyframes scrollleft {
-    to {
-        left: -200px;
-    }
-}
-
-.item1 {
-    animation-delay: calc(20s / 6 * (6 - 1) * -1);
-}
-
-.item2 {
-    animation-delay: calc(20s / 6 * (6 - 2) * -1);
-}
-
-.item3 {
-    animation-delay: calc(20s / 6 * (6 - 3) * -1);
-}
-
-.item4 {
-    animation-delay: calc(20s / 6 * (6 - 4) * -1);
-}
-
-.item5 {
-    animation-delay: calc(20s / 6 * (6 - 5) * -1);
-}
-
-.item6 {
-    animation-delay: calc(20s / 6 * (6 - 6) * -1);
-}
 /* ..................... */
