--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ html {
     overflow-x: hidden ;
 }
 
+.ko{
+    background-color: rgb(255, 255, 255);
+}
+
 .yo {
     border-image: fill 9 linear-gradient(rgba(0, 0, 0, 0.2), #000000);
 }
