--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@ html {
 .ko{
     background-color: rgb(255, 255, 255);
 }
+.opress{
+    z-index: 10;
+}
 
 .yo {
     border-image: fill 9 linear-gradient(rgba(0, 0, 0, 0.2), #000000);
